--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,16 @@
-<!--The content below is only a placeholder and can be replaced.-->
+
 <div style="text-align:center">
   <h1>
      {{ title }}
   </h1>
 </div>
- <div class="form-group">
-        
-         <label>Filter </label>
-         <input  type="text"  id="inputName" [(ngModel)]="inputName"/>
-         <input type="button" (click)="FilterByName()" value="Apply"/>
-   </div>
 <div class="table-responsive col-lg-12 col-xs-12">
   <table class="table table-bordered table-hover table-striped" [mfData]="empList"  #mf="mfDataTable" [mfRowsOnPage]="5">
      <thead>
         <tr>
           <th> </th>
-          <th><label class="" for="Search">Search</label>
-           <input type="text" [(ngModel)]="searchText" id="search" placeholder="Search to type"></th>
+          <th><label class="" for="Search">Search </label>
+           <input type="text" [(ngModel)]="search" id="search" placeholder="Search by name"></th>
           <th colspan="3">
           <button class="btn btn-danger" (click)="deletedata()">Delete</button>
           </th>
@@ -41,7 +35,8 @@
        </th>
     </tr>
     </thead>
-      <tbody *ngFor="let emp of mf.data ; let i=index  ">
+    <!--tbody *ngFor="let emp of (mf.data | searchPipe: ['email','name']); let i =index"-->
+      <tbody *ngFor="let emp of mf.data | searchPipe:'name':search; let i=index">
         <tr>
           <td><input type="checkbox" [(ngModel)]="emp.empdel" ></td>
            <td> {{emp.id}}</td>	
@@ -50,7 +45,7 @@
           <td> {{emp.email}}</td>
           <td> {{emp.gender}}</td>  
           <td colspan="4">
-             <button class="btn btn-default" (click)="Show(emp.id)"><!--*ngIf="isHide"-->
+             <button class="btn btn-default" (click)="Show(emp.id)">
                 {{emp.salary[0].salaryTot}}
              </button>
              <div *ngIf="emp.id == data1">
