--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,19 +9,17 @@
      <thead>
         <tr>
           <th> </th>
-          <th><label class="" for="Search">Search </label>
-           <input type="text" [(ngModel)]="search" id="search" placeholder="Search by name"></th>
-          <th colspan="3">
-          <button class="btn btn-danger" (click)="deletedata()">Delete</button>
-          </th>
-          <th colspan="5">
-              <label for="gender">Gender</label>
-                 <select name="gender" [(ngModel)]="emp.gender">
-                    <option *ngFor="let gender of genders" [value]="gender.value">  
-                    {{gender.display}}
-                    </option>
-                 </select>
-          </th>
+          <th><input type="text" [(ngModel)]="search" id="search" placeholder="Search by name"></th>
+          <th> <input type="text" [(ngModel)]="searchemail" id="search" placeholder="Search by email"></th>
+          <th colspan="2"> <label for="gender">Gender</label>
+            <select name="gender" [(ngModel)]="searchgender">
+               <option *ngFor="let gender of genders" [value]="gender.value" id="search">  
+                  {{gender.display}}
+               </option>
+            </select></th>
+          <th colspan="5"> 
+            <button class="btn btn-danger" (click)="deletedata()">Delete</button>
+           </th>
         </tr>
     <tr>
       <th>Active</th>
@@ -35,8 +33,8 @@
        </th>
     </tr>
     </thead>
-    <!--tbody *ngFor="let emp of (mf.data | searchPipe: ['email','name']); let i =index"-->
-      <tbody *ngFor="let emp of mf.data | searchPipe:'name':search; let i=index">
+      <tbody *ngFor="let emp of mf.data | searchPipe:'name':search | searchPipe:'email':searchemail |
+       searchPipe:'gender':searchgender; let i=index">
         <tr>
           <td><input type="checkbox" [(ngModel)]="emp.empdel" ></td>
            <td> {{emp.id}}</td>	
@@ -44,37 +42,27 @@
           <td> {{emp.name}}</td>
           <td> {{emp.email}}</td>
           <td> {{emp.gender}}</td>  
-          <td colspan="4">
-             <button class="btn btn-default" (click)="Show(emp.id)">
-                {{emp.salary[0].salaryTot}}
-             </button>
-             <div *ngIf="emp.id == data1">
-            <button *ngIf="isShow;">{{salaryTotal}}</button></div>
-            </td>
+          <td colspan="4"><button class="btn btn-default"  (click)="Show(emp.id)">{{emp.salary[0].salaryTot}}</button></td>
          </tr>
         <tr *ngIf="emp.id == data1">
           <td colspan="6"></td>
-          <td *ngIf="isHide"><b>Basic</b></td>
-          <td *ngIf="isHide"><b>Allowance</b></td>
-          <td *ngIf="isHide"><b>Deduction</b></td>
-          <td *ngIf="isHide"><b>Action</b></td>
+          <td *ngIf="isHide" class="txtsal"><b>Basic</b></td>
+          <td *ngIf="isHide" class="txtsal"><b>Allowance</b></td>
+          <td *ngIf="isHide" class="txtsal"><b>Deduction</b></td>
+          <td *ngIf="isHide" class="txtsal"><b>Action</b></td>
         </tr>
          <tr *ngIf="emp.id == data1">
              <td colspan="6"></td>
-             <td><input type="text" (change) = "chngeval(emp)" value="{{emp.salary[0].basic}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].basic"></td>
-             <td><input type="text" (change) = "chngeval(emp)" value="{{emp.salary[0].allowance}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].allowance"></td>
-             <td><input type="text" (change) = "chngeval(emp)"value="{{emp.salary[0].deduction}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].deduction"></td>
-             <td> <a (click)="clickMethod(emp.id)">
-                <span class="glyphicon glyphicon-pencil"></span>
-                </a> 
-            </td>
+             <td><input type="text" class="txtsal" (change) = "chngeval(emp)" value="{{emp.salary[0].basic}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].basic"></td>
+             <td><input type="text" class="txtsal" (change) = "chngeval(emp)" value="{{emp.salary[0].allowance}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].allowance"></td>
+             <td><input type="text" class="txtsal" (change) = "chngeval(emp)"value="{{emp.salary[0].deduction}}" [disabled]="!nextLibAvailable" [(ngModel)]="emp.salary[0].deduction"></td>
+             <td> <a (click)="clickMethod(emp.id)"><span class="glyphicon glyphicon-pencil"></span></a> </td>
           </tr>
       </tbody>
       <tfoot>
         <tr>
           <td colspan="11">
             <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
-            <!--pagination-controls (pageChange)="page = $event" id="1"-->
           </td>
         </tr>
       </tfoot>
